test/files/pos/hashhash-overloads.scala
object Test {
  def f = ().##
  def g = 5f.##
  def h = ({ 5 ; println("abc") }).##
  def f2 = null.##
}
